--- a/index.html
+++ b/index.html
@@ -77,6 +77,30 @@
 
         <hr class="block md:hidden lg:hidden border border-red-300">
 
+        <!-- banner part code is started -->
+
+        <div class="px-5 max-w-screen-xl mx-auto py-1 my-7 lg:relative flex flex-col-reverse">
+
+
+
+            <div>
+                <img src="./c1-assets/cat-big.png" alt="this is banner picture">
+            </div>
+
+
+            <div class="lg:absolute top-16">
+
+                <h1 class="text-3xl lg:text-5xl font-['adlam'] font-bold lg:leading-tight">Pamper Your Pet, <br> Because They Deserve <br> the Bes</h1>
+                <p class="text-gray-400 my-4">Discover a world of treats, toys, and essentials handpicked for <br> your furry friends. Shop now and make tails wag with joy!</p>
+                <button class="bg-yellow-300 px-7 py-2 rounded-lg">Find a pet</button>
+            </div>
+
+          
+
+
+
+        </div>
+
 
         
 
