browser category is completed for responsive

--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 
         <section>
 
-            <h2 class="font-bold pb-14 text-4xl lg:text-3xl pl-5 lg:pl-0">Browse By Categories</h2>
+            <h2 class="font-bold pb-14 text-3xl pl-4 lg:pl-0">Browse By Categories</h2>
 
            
             <!-- this is card  parent-->
 
-            <div class="grid grid-cols-2 px-5 lg:px-0 md:grid-cols-3 lg:flex gap-5 flex-wrap">
+            <div class=" grid grid-cols-2 gap-3 overflow-hidden pl-4 lg:pl-0 pr-3 lg:pr-0 md:grid-cols-3 lg:flex lg:gap-5 flex-wrap">
 
                 <!-- this is first card -->
 
