get pawsome is complete for desktop

--- a/index.html
+++ b/index.html
@@ -679,8 +679,44 @@
         </section>
 
 
-    </main>
+        <!-- get pawsome news code start here -->
 
+        <section class="mb-12 mt-20">
+
+            <div class="max-w-screen-xl mx-auto py-7 bg-rose-50 rounded-lg">
+
+                <div class="flex justify-between items-center">
+
+                    <div class="ml-24">
+
+                        <img src="./c1-assets/cute-pet-mid.png" alt="this is dog pic">
+
+
+                    </div>
+
+
+                    <div class="mr-96">
+
+                        <h3 class="font-bold text-2xl mb-5 -mt-10">Get pawsome news</h3>
+                        <p class="text-base">Exclusive traning tips, ticks, product deals and more</p>
+                        <input class="py-3 w-80 bg-slate-50 my-9 rounded-md pl-5 text-xs" type="email" name="email" placeholder="Enter email...">
+                        <br>
+                        <button class="py-1 px-6 bg-yellow-200 rounded-md">Subscribe</button>
+
+
+                    </div>
+                </div>
+
+            </div>
+
+
+        </section>
+
+
+        <!-- footer section code is start -->
+
+
+    </main>
 
 
 
