get pawsome news is complete for responsive

--- a/index.html
+++ b/index.html
@@ -683,19 +683,19 @@
 
         <section class="mb-12 mt-20">
 
-            <div class="max-w-screen-xl mx-auto py-7 bg-rose-50 rounded-lg">
+            <div class="max-w-screen-xl mx-5 lg:mx-auto py-7 bg-rose-50 rounded-lg text-center lg:text-justify">
 
-                <div class="flex justify-between items-center">
+                <div class="lg:flex justify-between items-center">
 
-                    <div class="ml-24">
+                    <div class="lg:ml-24 mb-20 lg:mb-0">
 
-                        <img src="./c1-assets/cute-pet-mid.png" alt="this is dog pic">
+                        <img class="mx-auto lg:mx-0" src="./c1-assets/cute-pet-mid.png" alt="this is dog pic">
 
 
                     </div>
 
 
-                    <div class="mr-96">
+                    <div class="lg:mr-96">
 
                         <h3 class="font-bold text-2xl mb-5 -mt-10">Get pawsome news</h3>
                         <p class="text-base">Exclusive traning tips, ticks, product deals and more</p>
@@ -713,10 +713,19 @@
         </section>
 
 
-        <!-- footer section code is start -->
+       
 
 
     </main>
+
+
+    <!--  footer section code is start -->
+
+
+    <footer>
+
+
+    </footer>
 
 
 
