--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
             <div>
-                <p class="text-2xl font-adlam text-center animate-pulse text-red-200">I am Tajul Islam</p>
+                <p class="text-2xl font-adlam text-center animate-pulse text-rose-500">I am Tajul Islam</p>
                 <img src="./c1-assets/cat-big.png" alt="this is banner picture">
             </div>
 
